# WeCompany

./: .env.example  .gitignore  SPECS.md  manage.py  pyproject.toml  requirements.txt
.claude/: settings.json
ai_company/: asgi.py  context_processors.py  urls.py  wsgi.py
ai_company/settings/: base.py  development.py  production.py
apps/accounts/: views.py
apps/controller/: admin.py  apps.py  budget_guard.py  models.py  urls.py  views.py
apps/controller/migrations/: 0001_initial.py
apps/emails/: models.py
apps/projects/: admin.py  models.py  tasks.py  urls.py  views.py
apps/projects/migrations/: 0001_initial.py  0002_remove_project_github_repo_alter_emailmessage_sender_and_more.py  0003_project_current_activity.py
apps/projects/services/: flow_manager.py  github_service.py  persona_engine.py  spec_service.py
static/css/: custom.css
static/js/: htmx_helpers.js
templates/: base.html
templates/accounts/: login.html  register.html
templates/controller/: dashboard.html
templates/projects/: _email_card.html  _email_list.html  _persona_status_bar.html  _poll_response.html  email_thread.html  inbox.html  new_project.html
